--- a/.github/workflows/build-push-docker.yml
+++ b/.github/workflows/build-push-docker.yml
@@ -21,3 +21,11 @@ jobs:
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
+          
+      - name: Build Docker image
+        run: |
+          docker build -f deploy-actions/src/main/docker/Dockerfile.open-jdk -t ${{ secrets.DOCKER_USERNAME }}/deploy-actions-image:latest .
+
+      - name: Push Docker image
+        run: |
+          docker push ${{ secrets.DOCKER_USERNAME }}/deploy-actions-image:latest
