--- a/.github/workflows/build-push-docker.yml
+++ b/.github/workflows/build-push-docker.yml
@@ -13,6 +13,16 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
+      - name: Set up JDK
+        uses: actions/setup-java@v3
+        with:
+          java-version: '17'
+          
+      - name: Build Quarkus project
+        run: |
+          cd deploy-actions
+          ./mvnw package 
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
