--- a/.github/workflows/build-push-docker.yml
+++ b/.github/workflows/build-push-docker.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Set up JDK
         uses: actions/setup-java@v3
         with:
-          distribution: 'adoptopenjdk'
+          distribution: 'adopt-openj9'
           java-version: '17'
           
       - name: Build Quarkus project
