--- a/.github/workflows/build-push-docker.yml
+++ b/.github/workflows/build-push-docker.yml
@@ -19,6 +19,9 @@ jobs:
           distribution: 'adopt-openj9'
           java-version: '17'
           
+      - name: Grant execute permissions for mvnw
+        run: chmod +x ./mvnw
+          
       - name: Build Quarkus project
         run: |
           cd deploy-actions
