--- a/.github/workflows/build-push-docker.yml
+++ b/.github/workflows/build-push-docker.yml
@@ -33,6 +33,9 @@ jobs:
           cd deploy-actions
           ./mvnw package 
 
+      - name: List target directory
+        run: ls -la
+          
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
@@ -41,3 +44,6 @@ jobs:
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
+      
+      - name: List target directory
+        run: ls -la
