--- a/.github/workflows/build-push-docker.yml
+++ b/.github/workflows/build-push-docker.yml
@@ -34,7 +34,7 @@ jobs:
           ./mvnw package 
 
       - name: List target directory
-        run: ls -la
+        run: ls -la /deploy-actions/quarkus
           
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
