--- a/deploy-actions/pom.xml
+++ b/deploy-actions/pom.xml
@@ -15,6 +15,8 @@
         <quarkus.platform.version>3.2.12.Final</quarkus.platform.version>
         <skipITs>true</skipITs>
         <surefire-plugin.version>3.0.0</surefire-plugin.version>
+        <sonar.organization>lmora</sonar.organization>
+        <sonar.host.url>https://sonarcloud.io</sonar.host.url>
     </properties>
 
     <dependencyManagement>
