--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,6 +30,8 @@ jobs:
           path: ~/.m2
           key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
           restore-keys: ${{ runner.os }}-m2
+      - name: Change directory to deploy-actions
+        run: cd deploy-actions
       - name: Build with Maven
         run: mvn clean install -DskipTests
       - name: Build and analyze
