--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,7 +31,7 @@ jobs:
           key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
           restore-keys: ${{ runner.os }}-m2
       - name: Change directory to deploy-actions
-        run: cd deploy-actions
+        run: ls -al
       - name: Build with Maven
         run: mvn clean install -DskipTests
       - name: Build and analyze
