--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,7 +33,7 @@ jobs:
       - name: Change directory to deploy-actions
         run: ls -al
       - name: Build with Maven
-        run: mvn clean install -DskipTests
+        run: mvn -f deploy-actions/pom.xml clean install -DskipTests
       - name: Build and analyze
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
